RaidDuel image generation now includes all player Pokemon Removed name from UUID generation as the PokemonData is set after the UUID is generated, causing an NPE